samples/_failures_safe/1761148472_5ab2a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a0ccd02.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_3a0ccd02.c:174: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_3a0ccd02.c:173:5: error: expected declaration or statement at end of input
  173 |     if
      |     ^~
